add release local